# Ethiclens

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-python.yml  ci-web.yml  docs.yml  golden-audit.yml  security.yml
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
docs/: index.md  limitations.md  methodology.md  sample-datasheet.md  sample-model-card.md  traceability-matrix.md
docs/adr/: 0001-composite-weights.md  0002-onnx-keystone-and-sandbox.md  0005-pin-ci-actions.md
infra/docker/: Dockerfile.api  entrypoint-api.sh
infra/locust/: locustfile.py
ml/: __init__.py  requirements.txt
ml/cli/: __init__.py  audit_dataset.py  generate_sample_report.py
ml/datasets/: __init__.py  loaders.py
ml/demo/: README.md  app.py  requirements.txt
ml/tests/: test_golden.py
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_baseline.py
services/api/src/ethiclens_api/: __init__.py  audit_service.py  config.py  db.py  ingestion.py  main.py  mitigation_service.py  models.py  schemas.py  security.py  tasks.py
services/api/src/ethiclens_api/routers/: auth.py  governance.py  models.py  reports.py  sessions.py
services/api/tests/: conftest.py  test_auth.py  test_models_and_governance.py  test_sessions_e2e.py
(+13 files in other folders)
