[project]
name = "ethiclens-api"
version = "0.1.0"
description = "EthicLens FastAPI service: audit sessions, sandboxed model ingestion, governance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fairness-core[reporting]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.4",
    "email-validator>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "arq>=0.26",
    "redis>=5.0",
]

[project.optional-dependencies]
ingestion = ["onnx>=1.16", "onnxruntime>=1.18", "skl2onnx>=1.17", "skops>=0.10"]
test = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethiclens_api"]

[tool.uv.sources]
fairness-core = { workspace = true }
